# AIvestBR

./: .bumpversion.cfg  .coverage  .cz.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  cz_test.txt  project_file_list.csv  pyproject.toml  requirements.txt
.github/: requirements-ci.txt
.github/workflows/: ci.yml  insert_file_path_comments.yml  schedule.yml  version-bump.yml
.github/workflows/.github/workflows/: auto-bump-version.yml
.qodo/: history.sqlite
config/: .env  __init__.py  settings.py
data_collection/SELIC/: selic.py
devtools/: requirements-dev.txt
docs/: README.md  api_bcb_.txt  data_ingestion.md  estrutura_projeto.csv  estrutura_projeto.txt  etapas_sugeridas.txt  renda_fixa.txt  requirements.txt
docs/RendaFixa/: ETAPAS_RENDA_FIXA.txt  Objectives.txt  aspectos_tecnicos.txt  mapeamento.txt  metadados.txt
docs/en/: README.md
docs/pt-br/: README.md
prompts/: tests.md
src/: config.py  main.py
src/aivestbr/: __init__.py  main.py
src/aivestbr/analysis/: __init__.py
src/aivestbr/cli/: __init__.py
src/aivestbr/data_ingestion/: __init__.py  coletar_dados.py  requisicao_api.py  requisicao_http.py  salvamento_dados.py
src/aivestbr/utils/: __init__.py  logger-LEONARDO-JESUS.py  logger.py  logging_config.py  py.typed  save_data.py  schedule_b3.py
tests/: test_requisicao_api.py  test_requisicao_http.py
tests/analysis/: test_init.py
tests/cli/: test_init.py
tests/config/: test_settings.py
tests/data_ingestion/: test_init.py
tests/main/: test_main.py
tests/utils/: test.http  test_logging_config.py
