[project]
name = "aivestbr"
version = "0.1.0"
description = "Sistema recomendação de investimentos utilizando Séries Temporais, Machine e Learning e Análise Preditiva."
authors = [
    {name = "Leonardo Trindade",email = "leotavo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.4.1"
pytest = "^8.3.5"
black = {extras = ["jupyter"], version = "^25.1.0"}
isort = "^6.0.1"
flake8 = "^7.1.2"
mypy = "^1.15.0"
pylint = "^3.3.4"
pre-commit = "^4.1.0"
pytest-cov = "^6.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"

[tool.pylint.MASTER]
init-hook = 'import sys, os; sys.path.append(os.path.abspath("config"))'
