[project]
name = "aivestbr"
version = "0.1.0"
description = "Sistema de recomendação de investimentos usando Série Temporal, ML, etc."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"

authors = [
  { name = "Leonardo Trindade", email = "leotavo@gmail.com" }
]

# Dependências principais (produção)
dependencies = [
  "requests>=2.32.3,<3.0.0",
  "beautifulsoup4>=4.13.3,<5.0.0",
  "lxml>=5.3.1,<6.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "pytest>=8.3.5,<9.0.0",
  "flask>=3.1.0,<4.0.0",
  "pytest-cov (>=6.0.0,<7.0.0)"
]

[tool.poetry]
packages = [{ include = "aivestbr", from = "src" }]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
commitizen = ">=4.4.1,<5.0.0"
pytest-cov = ">=6.0.0,<7.0.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
